@@ -83,7 +83,10 @@ public class Compiler implements ITypeRequestor, ProblemSeverities {
 		this.lookupEnvironment =
 			new LookupEnvironment(this, options, problemReporter, environment);
 		this.parser =
-			new Parser(problemReporter, this.options.parseLiteralExpressionsAsConstants);
+			new Parser(
+				problemReporter, 
+				this.options.parseLiteralExpressionsAsConstants, 
+				this.options.getAssertMode());
 	}
 	
 	/**
